Compile fixes